2006-01-18  Yen-Ju Chen <yjchenx at gmail>

    * Update to UKKQueue 0.4 (http://www.zathras.de).
    * Fix compilation on Cocoa.


2005-12-07  Quentin Mathe <qmathe@club-internet.fr>
    
    * Source/GNUmakefile: Included EtoileCompatibility.h in headers to be
    installed and removed the first HEADER_FILES variable use which is
    redundant.

2005-05-19  Quentin Mathe <qmathe@club-internet.fr>
	
	* Headers/EtoileCompatibility.h: Added GCC_VERSION macro and truncf macro to 
	replace truncf C99 function by an (int) cast when we compile on Darwin with 
	FSF GCC (truncf returns absurd results on such system).
	* Headers/UKDistributedView.h:
	* Headers/UKFinderIconCell.h: 
	Added import directive for 'EtoileCompatibility.h' in order to override truncf
	function in implementation code.
	* Source/UKDistributedView.m (-getItemIndexAtPoint:): Added conditional 
	compilation directive to disable NSReadPixel function not supported by GNUstep 
	currently.

2005-05-09  Quentin Mathe <qmathe@club-internet.fr>
	
	* Source/GNUmakefile: Added GNUSTEP_HOST_OS check in order to allow compilation 
	on platforms where kqueue isn't available (like Linux), by discarding UKKQueue 
	when needed.
		
2005-03-10  Quentin Mathe <qmathe@club-internet.fr>
	
	* INSTALL: Updated in order to talk about EtoileExtensions and not Gorm.
	* Source/GNUmakefile: Improved formatting.

2005-01-04  Quentin Mathe <qmathe@club-internet.fr>
	
	* Headers/EtoileCompatibility.h: Added.

2005-01-03  Quentin Mathe <qmathe@club-internet.fr>
	
	* .DS_Store:
	* Headers/.DS_Store:
	* Source/.DS_Store:
	Removed.
	* .cvsignore:
	* Headers/.cvsignore:
	* Headers/Cocoa/.cvsignore:
	* Source/.cvsignore:
	Added.

2005-01-02  Quentin Mathe <qmathe@club-internet.fr>
	
	* Headers/Cocoa/Cocoa.h:
	* Headers/NSBezierPathCappedBoxes.h:
	* Headers/NSFileManager+NameForTempFile.h:
	* Headers/NSImage+NiceScaling.h:
	* Headers/UKDistributedView.h:
	* Headers/UKFinderIconCell.h:
	* Headers/UKKQueue.h:
	* Headers/UKMainThreadProxy.h: