@@ -1,29 +1,3 @@
-#
-#	GNUmakefile
-#
-#	Makefile for Etoile Extensions Kit
-#
-#	Copyright (C) 2004 Quentin Mathe <qmathe@club-internet.fr>
-#
-#	This Makefile is free software; you can redistribute it and/or
-#	modify it under the terms of the GNU General Public License
-#	as published by the Free Software Foundation; either version 2
-#	of the License, or (at your option) any later version.
-#
-#	This program is distributed in the hope that it will be useful,
-#	but WITHOUT ANY WARRANTY; without even the implied warranty of
-#	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
-#
-#	See the GNU General Public License for more details.
-#
-#	You should have received a copy of the GNU General Public License
-#	along with this program; if not, write to:
-#
-#		Free Software Foundation, Inc.
-#		59 Temple Place - Suite 330
-#		Boston, MA  02111-1307, USA
-#
-
 PACKAGE_NAME = EtoileExtensionsKit
 
 include $(GNUSTEP_MAKEFILES)/common.make
